2016-11-02  Romain Bellessort  <romain.bellessort@crf.canon.fr>

        [Readable Streams API] Enable creation of ReadableByteStreamController
        https://bugs.webkit.org/show_bug.cgi?id=164014

        Reviewed by Youenn Fablet.

        Enable the byte stream part of Readable Streams API by default.

        * Scripts/webkitperl/FeatureList.pm:
        * TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

2016-11-01  Ryosuke Niwa  <rniwa@webkit.org>

        Remove CUSTOM_ELEMENTS build flag
        https://bugs.webkit.org/show_bug.cgi?id=164267

        Reviewed by Antti Koivisto.

        Removed the build flag.

        * TestWebKitAPI/Configurations/FeatureDefines.xcconfig:

2016-11-01  Alex Christensen  <achristensen@webkit.org>

        Percent-encode non-ASCII code points in hosts of URLs with unrecognized schemes
        https://bugs.webkit.org/show_bug.cgi?id=164290

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebCore/URLParser.cpp:
        (TestWebKitAPI::checkRelativeURL):
        (TestWebKitAPI::checkURLDifferences):
        (TestWebKitAPI::checkRelativeURLDifferences):
        Move helper functions to the top so I can use them from any tests.
        (TestWebKitAPI::shouldFail):
        (TestWebKitAPI::checkURL):
        (TestWebKitAPI::TEST_F):

2016-11-01  Hyowon Kim  <hw1008.kim@samsung.com>

        [GTK] Failed to generate GeoClue2Interface files.
        https://bugs.webkit.org/show_bug.cgi?id=164270

        Reviewed by Michael Catanzaro.

        To generate codes for D-Bus interfaces,
        geoclue-2.0 package including D-Bus introspection XML files should be installed.

        * gtk/install-dependencies: add geoclue-2.0 package.

2016-11-01  Fujii Hironori  <Hironori.Fujii@sony.com>

        [CMake] generate-bindings-all.pl uses USES_TERMINAL which leaves a noisy line in interactive Ninja build
        https://bugs.webkit.org/show_bug.cgi?id=163868

        Reviewed by Michael Catanzaro.
